--- a/index2.html
+++ b/index2.html
@@ -12,9 +12,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="style.css"> -->
+
+    <!--Google Sign-in-->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="818275019442-i677ngdm3h9clssjl5jn0a5se2646rjm.apps.googleusercontent.com">
 </head>
 <body>
+    
+    <div class="container">
 
+            <div class="jumbotron text-center"><h1>User Authentication</h1></div>
+
+            <div class="Btn">
+                    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            </div>  
+
+    </div>
 
 
 
@@ -23,7 +36,7 @@
     
 
 
-        <!-- <script src="apps.js"></script> -->
+        <script src="assets/javascript/apps.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
