--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
     <!--Google Sign-in-->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="818275019442-i677ngdm3h9clssjl5jn0a5se2646rjm.apps.googleusercontent.com">
-    <!-- ,"project_id":"userauthenticati-1523513248738","auth_uri":"https://accounts.google.com/o/oauth2/auth"
-    ,"token_uri":"https://accounts.google.com/o/oauth2/token",
-    "auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs",
-    "client_secret":"BNUsLCeZ5ZiyOJdHF7V6p_V8","redirect_uris":["https://rnguyen05.github.io"], 
-    "javascript_origins":["https://rnguyen05.github.io"]-->
     
 </head>
 <body>
@@ -30,7 +25,8 @@
             <div class="jumbotron text-center"><h1>User Authentication</h1></div>
 
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
-
+            
+            <a href="#" onclick="signOut();">Sign out</a>
     </div>
 
 
