--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             <div class="jumbotron text-center"><h1>User Authentication</h1></div>
 
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+            <!-- <a href="#" onclick="signOut();">Sign out</a> -->
+
             
-            <a href="#" onclick="signOut();">Sign out</a>
     </div>
 
 
