--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="jumbotron text-center"><h1>User Authentication</h1></div>
 
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
-
+            <div class="showUserName"></div>
             <!-- <a href="#" onclick="signOut();">Sign out</a> -->
 
             
