added console log

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <div class="container">
             <!--Google sign-in-->
             <div class="jumbotron text-center"><h1>User Authentication</h1></div>
-            <div class="showUserName mt-3"></div>
-            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            
+            <div class="g-signin2" data-onsuccess="onSignIn"><span class="showUserName ml-3"></span></div>
+
             <!--End Google sign-in-->
             
             <!--Facebook Login-->
