added console log

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <!--Google sign-in-->
             <div class="jumbotron text-center"><h1>User Authentication</h1></div>
             
-            <div class="g-signin2" data-onsuccess="onSignIn"><span class="showUserName ml-3"></span></div>
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            <div class="showUserName ml-3"></div>
 
             <!--End Google sign-in-->
             
