--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     <div class="container">
             <!--Google sign-in-->
             <div class="jumbotron text-center"><h1>User Authentication</h1></div>
-            
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
-            <div class="showUserName ml-3"></div>
-
+            <div class="showUserName mt-3"></div>
             <!--End Google sign-in-->
             
             <!--Facebook Login-->
