--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!--End Google sign-in-->
             
             <!--Facebook Login-->
-            <!-- <div id="fb-root"></div>
+            <div id="fb-root"></div>
             <script>(function(d, s, id) {
               var js, fjs = d.getElementsByTagName(s)[0];
               if (d.getElementById(id)) return;
@@ -37,14 +37,10 @@
               js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&appId=497229994007275&autoLogAppEvents=1';
               fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));</script>
-            End Facebook Login-->
-
-            <!-- <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div> --> 
-            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-            </fb:login-button>
             
-            <div id="status">
-            </div>
+
+            <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div> 
+            <!--End Facebook Login-->
             <div class="showUserName mt-3"></div>
     </div>
 
