Added username and password login

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <div class="container">
             <!--Google sign-in-->
             <div class="jumbotron text-center"><h1>User Authentication</h1></div>
+            <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
 
-            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            <button id="googleBtn" class="btn btn-secondary">Google</button>
+
+            <div class="g-signin2"></div>
             <!--End Google sign-in-->
             
             <!--Facebook Login-->
