Added username and password login

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <button id="googleBtn" class="btn btn-secondary">Google</button>
 
-            <div class="g-signin2"></div>
+            <!-- <div class="g-signin2"></div> -->
             <!--End Google sign-in-->
             
             <!--Facebook Login-->
