--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             }(document, 'script', 'facebook-jssdk'));</script>
             
 
-            <div class="fb-login-button mt-3" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div> 
+            <div class="fb-login-button mt-3" data-max-rows="1" data-size="large"  data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div> 
             <!--End Facebook Login-->
 
             <!-- Login with username and password -->
