--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
             <div class="row">
                     <button id="googleBtn" class="btn btn-secondary">Google</button>
-                    <button id="facebookBtn" class="btn btn-secondary ml-5">Facebook</button>
-                    <!-- <div class="fb-login-button" data-max-rows="1" data-size="large"  data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>  -->
+                    <button id="facebookBtn" class="btn btn-secondary ml-5" ata-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false">Facebook</button>
+                    <!-- <div class="fb-login-button" data-max-rows="1" data-size="large"  data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div> -->
             </div>
            
 
