Added username and password login

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="jumbotron text-center"><h1>User Authentication</h1></div>
             <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
             <div class="row">
-                    <button id="googleBtn" class="btn btn-secondary">Google</button>
+                    <button id="googleBtn" class="major-provider btn _block _medium _google">Google</button>
                     <button id="facebookBtn" class="fb-login-button btn btn-secondary ml-5" ata-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false">Facebook</button>
                     <!-- <div class="fb-login-button" data-max-rows="1" data-size="large"  data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div> -->
             </div>
