--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
             <div class="row">
                     <button id="googleBtn" class="major-provider btn _block _medium _google">Google</button>
-                    <button id="facebookBtn" class="fb-login-button btn btn-secondary ml-5" ata-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false">Facebook</button>
+                    <button id="facebookBtn" class="fb-login-button ml-5" ata-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false">Facebook</button>
                     <!-- <div class="fb-login-button" data-max-rows="1" data-size="large"  data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div> -->
             </div>
            
