--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 <body>
     <!--Facebook Login-->
     <!-- <div id="fb-root"></div> -->
-    <!-- <script>(function(d, s, id) {
+    <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
       js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&appId=497229994007275&autoLogAppEvents=1';
       fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script> -->
+    }(document, 'script', 'facebook-jssdk'));</script>
     
 
     
