Added username and password login

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     
+    <div id="status"></div>
 
     
     <!--End Facebook Login-->
